results/SVCOMP/houdini/log-boundcheck100-2024_03_18_16_01_33.txt
public class boundcheck100 {

  //@ requires i < 1;
  //@ requires i <= 1;
  //@ requires i == 1;
  //@ requires i != 1;
  //@ requires i >= 1;
  //@ requires i > 1;
  //@ requires i < 0;
  //@ requires i <= 0;
  //@ requires i == 0;
  //@ requires i != 0;
  //@ requires i >= 0;
  //@ requires i > 0;
  //@ requires i < -1;
  //@ requires i <= -1;
  //@ requires i == -1;
  //@ requires i != -1;
  //@ requires i >= -1;
  //@ requires i > -1;
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures i >= 0 ==> \result;
  //@ ensures i >= 0 ==> !\result;
  private static boolean recursion(int i) {
    if (i == 0) {
      return true;
    }
    if (i > 0) {
      return recursion(i - 1);
    }
    if (i < 0) {
      return false;
    }
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    recursion(-2);
    recursion(-1);
    recursion(0);
    recursion(1);
    recursion(2);
    recursion(3);
    recursion(4);
  }
}


/home/max/Documents/JMLGPT/tmp/boundcheck100.java:35: error: missing return statement
  }
  ^
1 error

